--- a/src/index.css
+++ b/src/index.css
@@ -194,7 +194,7 @@ button {
 }
 
 .betTypes button {
-  /* background-color: p; */
+  /* background-color: sandybrown; */
   padding: 15px 25px;
   border: 2px dotted pink;
   border-radius: 20px;
@@ -208,7 +208,6 @@ button:hover {
   background-color: rgb(69, 42, 121);
   padding: 15px;
   border-radius: 30px;
-  /* outline: none; */
   border: none;
 }
 
@@ -218,26 +217,27 @@ button:hover {
 
 .allbetdiv {
   display: flex;
+  flex-direction: column;
   align-items: center;
   gap: 15px;
   justify-content: center;
 }
 
 .add1kbtn {
-  background-color: rgb(216, 145, 12);
+  background-color: rgb(133, 2, 2);
   border: none;
   font-weight: 600;
   word-spacing: 1px;
-  color: black;
+  /* color: black; */
 }
 
 .selectedBet {
-  background-color: rgb(24, 6, 73);
+  background-color: rgba(255, 166, 0, 0.849);
   border: none;
 }
 
 .selectedChipAmt {
-  background-color: #cb1e56;
+  background-color: rgba(255, 166, 0, 0.849);
   padding: 15px;
   border-radius: 30px;
   border: none;
@@ -249,4 +249,10 @@ button:hover {
   border: 2px solid white;
   border-radius: 5px;
   margin: 5px auto;
+}
+
+.resultDisplay {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
 }
